v-onで引数付きのメソッド

--- a/ex.html
+++ b/ex.html
@@ -10,19 +10,23 @@
     <body>
         <h2>クリックしたら、1増やす例</h2>
 		<div id="app">
-			<p>{{ count }}</p> 
-			<button v-on:click="countUp">1増やす</button>
+			<button value="いいね" v-bind:disabled="isClick"
+				v-on:click="oneClick">いいね</button>
         </div>
 
         <script>
-            new Vue({
+        function iine() {
+				alert("いいね");
+			}
+			new Vue({
 				el: '#app',
 				data: {
-					count:0
+					isClick: false
 				},
 				methods: {
-					countUp: function() {
-						this.count++;
+					oneClick: function() {
+						this.isClick = true;
+						iine();
 					}
 				}
 			})
